Closed Bug 189691 Opened 23 years ago Closed 23 years ago

ldap component fails to build with latest CVS 20030119

Categories

(Directory Graveyard :: LDAP XPCOM SDK, defect)

defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.3

People

(Reporter: Mitch, Assigned: dmosedale)

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030115 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030115 When building latest cvs mozilla the build always fails (on Solaris and Linux tested so far) with c++ -o nsLDAPChannel.o -c -DMOZ_LDAP_XPCOM_EXPERIMENTAL -DMOZ_PSM -DOSTYPE=\"Linux2.4\" -DOSARCH=\"Linux\" -DOJI -I../../../../dist/public/ldap -I../../../../dist/include/xpcom -I../../../../dist/include/string -I../../../../dist/include/necko -I../../../../dist/include/mimetype -I../../../../dist/include/mozldap -I../../../../dist/include -I/var/tmp/huge/mozilla/dist/include/nspr -I/usr/local/include -I/usr/local/include -I/usr/local/include -I/usr/X11R6/include -fPIC -I/var/tmp/huge/mozilla/dist/public/ldap -O2 -g -I/usr/X11R6/include -fno-rtti -fno-exceptions -Wall -Wconversion -Wpointer-arith -Wcast-align -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -pedantic -Wno-long-long -I/var/tmp/huge/mozilla/dist/public/ldap -I/usr/local/include -O2 -g -pthread -pipe -DNDEBUG -DTRIMMED -ffunction-sections -O -I/var/tmp/huge/mozilla/dist/public/ldap -O2 -g -I/usr/X11R6/include -DMOZILLA_CLIENT -include ../../../../mozilla-config.h -Wp,-MD,.deps/nsLDAPChannel.pp nsLDAPChannel.cpp nsLDAPChannel.cpp: In method `nsresult nsLDAPChannel::AsyncOpen(nsIStreamListener *, nsISupports *)': nsLDAPChannel.cpp:606: `NS_PIPE_DEFAULT_SEGMENT_SIZE' undeclared (first use this function) nsLDAPChannel.cpp:606: (Each undeclared identifier is reported only once nsLDAPChannel.cpp:606: for each function it appears in.) nsLDAPChannel.cpp:607: `NS_PIPE_DEFAULT_BUFFER_SIZE' undeclared (first use this function) make[4]: *** [nsLDAPChannel.o] Error 1 make[4]: Leaving directory `/var/tmp/huge/mozilla/directory/xpcom/base/src' make[3]: *** [libs] Error 2 make[3]: Leaving directory `/var/tmp/huge/mozilla/directory/xpcom/base' make[2]: *** [libs] Error 2 make[2]: Leaving directory `/var/tmp/huge/mozilla/directory/xpcom' make[1]: *** [tier_9] Error 2 make[1]: Leaving directory `/var/tmp/huge/mozilla' make: *** [default] Error 2 Reproducible: Always Steps to Reproduce: 1. build mozilla from cvs 2. 3. Actual Results: Build fails Expected Results: Build succeeds
Keywords: regression
Attached patch patchSplinter Review
pass 0 to use default buffer segment/max size
Can this patch be checked in please since cvs builds are still failing.
Comment on attachment 111993 [details] [diff] [review] patch r=dmose
Attachment #111993 - Flags: review+
Status: NEW → ASSIGNED
Hardware: PC → All
Target Milestone: --- → mozilla1.3
This is atill happening with todays CVS 20030122. So i guess the patch hasn't been commited to cvs yet ?
Comment on attachment 111993 [details] [diff] [review] patch r+sr=dmose Seeking approval for build bustage from necko landing for --enable-ldap-extensions
Attachment #111993 - Flags: superreview+
Attachment #111993 - Flags: approval1.3b?
Comment on attachment 111993 [details] [diff] [review] patch a=asa (on behalf of drivers) for checkin to 1.3beta.
Attachment #111993 - Flags: approval1.3b? → approval1.3b+
Fixed. 01/24/2003 01:57 asa%mozilla.org mozilla/ directory/ xpcom/ base/ src/ nsLDAPChannel.cpp 1.52 1/3 checkin for dmose. fix bustage for --enable-ldap-extensions bug 189691 r+sr=dmose a=asa
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: