checkin for dmose. fix bustage for --enable-ldap-extensions bug 189691 r+sr=dmose a=asa